# oracle

./: .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
backend/: pyproject.toml  requirements.txt
backend/config/: .env  config.json
backend/src/: app.py  app_test.py  interface.py  loggingManager.py  playground.py
backend/src/algorithms/: baseModel.py
backend/src/algorithms/indicators/: __init__.py  baseIndicator.py  exponentialMovingAverage.py  ichimoku.py  movingAverageConvergenceDivergence.py  relativeStrengthIndex.py  simpleMovingAverage.py
backend/src/algorithms/strategies/: __init__.py  baseStrategy.py
backend/src/algorithms/utils/: __init__.py  algorithmRegistry.py  crossoverUtils.py  model_registry.py  registry.py
backend/src/analysis/: analyseAsset.py
backend/src/api/: __init__.py  fetchData.py  fetch_data.py  nobitexApi.py
backend/src/api/utils/: __init__.py  dataAnalyse.py  dataModifier.py  handleStatus.py  modifyData.py
backend/src/cli/: __init__.py  interface.py  repl.py
backend/src/cli/commands/: __init__.py  appCommands.py  botCommands.py  helperCommand.py  helperCommands.py  utils.py
backend/src/cli/styles/: themes.py
backend/src/commands/: __init__.py  interface.py
backend/src/commands/scripts/: __init__.py  scriptCRUDProfile.py  scriptHelper.py
backend/src/commands/utils/: __init__.py  (+2 more)
backend/src/constants/: __init__.py  profileConstants.py  walletConstants.py
backend/src/cst_logger/: loggingFormatters.py  loggingManager.py
backend/src/custom_logger/: __init__.py  loggingFormatters.py  loggingManager.py
backend/src/database/: __init__.py  __init__.py~  models.py~  sqlRunner.py  test.py  test_sql_alchemy.py~
backend/src/dataclasses/: portfolio.py
backend/src/exceptions/: __init__.py  fetchDataException.py  fetchDataExceptions.py  registryException.py
backend/src/indicator/: __init__.py  indicatorBase.py  movingAverageCrossover.py
backend/src/perf/: __init__.py  evolutionaryAlgorithm.py
backend/src/services/: __init__.py  baseModel.py  initService.py  init_service.py  oracle.py  scheduler.py
backend/src/strategies/: __init__.py  indicatorBase.py  relativeStrengthIndex.py  simpleAverageCrossover.py  simpleMovingAverage.py
backend/src/utils/: __init__.py  __init__.py~  checkAnnotations.py  configOperations.py  loadConfig.py
backend/tests/test_api/: test_fetchData.py
backend/tests/test_exceptions/: test_dataExceptions.py  test_dataExceptions.py.isorted
(+156 files in other folders)
